@@ -1,3 +1,7 @@
+2013-02-12  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Cleanup audio file rendering
+
 2013-02-11  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Update the manual
